@@ -1,5 +1,6 @@
 * Log when executed from CLI
 * Possibility to render optgroups of select clickable (use <option> tag for them)
+* check_netmask() and check_network_address() functions support hex format of netmask 
 
 Version 2.2.2
 ==============
